add jolo agent