@@ -1,4 +1,4 @@
-FROM amazoncorretto:8
+FROM amazoncorretto:11
 
 # Install maven to build project
 RUN curl -fsSL -o /tmp/apache-maven.tar.gz https://dlcdn.apache.org/maven/maven-3/3.9.9/binaries/apache-maven-3.9.9-bin.tar.gz
@@ -11,7 +11,6 @@ RUN rm -f /tmp/apache-maven.tar.gz
 ENV MAVEN_HOME /opt/maven
 ENV PATH $MAVEN_HOME/bin:$PATH
 
-RUN curl -fsSL -o /app/jolokia-agent-jvm-2.1.1-javaagent.jar https://repo1.maven.org/maven2/org/jolokia/jolokia-agent-jvm/2.1.1/jolokia-agent-jvm-2.1.1-javaagent.jar
 
 WORKDIR /app
 
@@ -21,10 +20,18 @@ ADD src /app/src
 
 RUN curl -fsSL -o /app/applicationinsights-agent-3.6.0.jar https://github.com/microsoft/ApplicationInsights-Java/releases/download/3.6.0/applicationinsights-agent-3.6.0.jar
 
+RUN curl -fsSL -o /app/jolokia-agent-jvm-javaagent.jar https://repo1.maven.org/maven2/org/jolokia/jolokia-agent-jvm/2.1.1/jolokia-agent-jvm-2.1.1-javaagent.jar
+
 COPY applicationinsights.json /app/applicationinsights.json
 # Build the app
 RUN ["mvn", "clean", "package"]
 
 # Run the app
 RUN bash -c 'touch /app/target/hello-world-0.0.1-SNAPSHOT.jar'
-ENTRYPOINT ["java","-javaagent:jolokia-agent-jvm-2.1.1-javaagent.jar=port=7777,host=localhost", "-Djava.security.egd=file:/dev/./urandom","-jar","/app/target/hello-world-0.0.1-SNAPSHOT.jar"]
+ENTRYPOINT ["java", \
+    "-javaagent:/app/applicationinsights-agent-3.6.0.jar", \
+    "-javaagent:/app/jolokia-agent-jvm-javaagent.jar=port=7777,host=localhost", \
+    "-Djava.security.egd=file:/dev/./urandom", \
+    "--add-opens=java.base/java.lang=ALL-UNNAMED", \
+    "--add-opens=java.base/java.util=ALL-UNNAMED", \
+    "-jar","/app/target/hello-world-0.0.1-SNAPSHOT.jar"]
